WARNING: Before upgrading MIMEDefang, please search this file for
*** NOTE INCOMPATIBILITY ** to see if anything has changed that might
affect your filter.

2024-06-10 Giovanni Bechis <g.bechis@snb.it>

       * add action_greylist to support basic greylisting

2024-03-26 Giovanni Bechis <g.bechis@snb.it>

       * remove CR from multiline header's values

2024-03-15 Philip Prindeville <philipp@redfish-solutions.com>

       * simplify newline and return/newline handling (#79)

2024-01-23 Giovanni Bechis <gbechis@pccc.com>

	* add a sub to send a multipart mail message using Sendmail

2023-11-22 Giovanni Bechis <g.bechis@snb.it>

	* add a sub to check emails using Mail::SpamAssassin::Client

2023-10-03 Giovanni Bechis <g.bechis@snb.it>

	* add re_match_in_tgz_directory sub to block attachments in .tgz files

2023-06-07 Giovanni Bechis <g.bechis@snb.it>

	* add a Mail::MIMEDefang::SPF module to do Sender Policy Framework
	checks

2023-05-01 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.4.1 RELEASED

2023-04-25 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.4 RELEASED

2023-04-16 Giovanni Bechis <g.bechis@snb.it>

	* add a mimedefang-release program to release a message from
	quarantine directory

2023-04-16 Giovanni Bechis <g.bechis@snb.it>

	* add email_is_blacklisted to check an email address against an
	hashbl rbl server

2023-03-31 Giovanni Bechis <g.bechis@snb.it>

	* UTF-8 support improvements

2023-02-07 Giovanni Bechis <gbechis@pccc.com>

	* Authentication-Results header improvements

2023-01-16 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.3 RELEASED

2023-01-10 Giovanni Bechis <gbechis@pccc.com>

	* add UTF-8 support to md_graphdefang_log

2022-11-24 Giovanni Bechis <g.bechis@snb.it>

	* add a gen_mx_id Perl implementation, needed for OpenSMTPd support

2022-10-21 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 3.2 RELEASED

2022-09-26 Giovanni Bechis <g.bechis@snb.it>

	* make graphdefang compatible with current php versions
